update akka version, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,7 @@ akka {
   
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
+    warn-about-java-serializer-usage = false
   }
   
   remote {
