--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,25 @@
+include "postgres-application.conf"
 akka {
   loglevel = INFO
-  
+
   actor {
-    provider = "akka.cluster.ClusterActorRefProvider"
-    warn-about-java-serializer-usage = false
+#        serializers {
+#          all_s = "sample.blog.serialization.AllEventSerializer"
+#            java = "akka.serialization.JavaSerializer"
+#        proto = "akka.remote.serialization.ProtobufSerializer"
+#        }
+#        serialization-bindings {
+#            "sample.blog.Post$Event" = all_s
+#            "sample.blog.Post$Command" = all_s
+#            "sample.blog.AuthorListing$Command" = all_s
+#            "akka.persistence.PersistentRepr" = all_s
+#            "akka.dispatch.sysmsg.Watch" = java
+#            "java.io.Serializable" = none
+#        }
+        provider = "akka.cluster.ClusterActorRefProvider"
+        warn-about-java-serializer-usage = true
   }
-  
+
   remote {
     log-remote-lifecycle-events = off
     netty.tcp {
@@ -23,21 +37,10 @@ akka {
 
     metrics.enabled = off
   }
-
-  persistence {
-    journal {
-      plugin = "akka.persistence.journal.leveldb-shared"
-      leveldb-shared.store {
-        # DO NOT USE 'native = off' IN PRODUCTION !!!
-        native = off
-        dir = "target/shared-journal"
-      }
-    }
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      local.dir = "target/snapshots"
-    }
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-    snapshot-store.local.dir = "target/snapshots"
-  }
 }
+jdbc-read-journal {
+  refresh-interval = "10ms"
+  max-buffer-size = "500"
+}
+
+slick.db.idleTimeout = 10000 // 10 seconds
