--- a/src/main/resources/postgres-application.conf
+++ b/src/main/resources/postgres-application.conf
@@ -10,7 +10,7 @@ akka {
     snapshot-store {
       plugin = "jdbc-snapshot-store"
       # Enable the line below to automatically start the snapshot-store when the actorsystem is started
-      # auto-start-snapshot-stores = ["jdbc-snapshot-store"]
+       auto-start-snapshot-stores = ["jdbc-snapshot-store"]
     }
   }
 }
