adding read part, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,14 +6,17 @@ akka {
 #        serializers {
 #          all_s = "sample.blog.serialization.AllEventSerializer"
 #            java = "akka.serialization.JavaSerializer"
-#        proto = "akka.remote.serialization.ProtobufSerializer"
+#            proto = "akka.remote.serialization.ProtobufSerializer"
+#            byte ="akka.serialization.DisabledJavaSerializer"
 #        }
 #        serialization-bindings {
-#            "sample.blog.Post$Event" = all_s
-#            "sample.blog.Post$Command" = all_s
-#            "sample.blog.AuthorListing$Command" = all_s
-#            "akka.persistence.PersistentRepr" = all_s
-#            "akka.dispatch.sysmsg.Watch" = java
+#            "sample.blog.Post$Event" = byte
+#            "sample.blog.Post$Command" = byte
+#            "sample.blog.AuthorListing$Command" = byte
+#            "sample.blog.AuthorListing$Posts" = byte
+#            "akka.persistence.PersistentRepr" = byte
+#            "akka.dispatch.sysmsg.Watch" = byte
+#            "scala.collection.immutable.List" = java
 #            "java.io.Serializable" = none
 #        }
         provider = "akka.cluster.ClusterActorRefProvider"
