--- a/src/main/resources/postgres-application.conf
+++ b/src/main/resources/postgres-application.conf
@@ -16,7 +16,13 @@ akka {
 }
 
 jdbc-journal {
-  slick = ${slick}
+      slick = ${slick}
+    event-adapters {
+      postTagging = "sample.blog.read.PostTaggingEventAdapter"
+    }
+    event-adapter-bindings {
+      "sample.blog.Post$Event" = postTagging
+    }
 }
 
 # the akka-persistence-snapshot-store in use
