adding read part, es_posts, 2

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,7 +20,7 @@ akka {
 #            "java.io.Serializable" = none
 #        }
         provider = "akka.cluster.ClusterActorRefProvider"
-        warn-about-java-serializer-usage = true
+        warn-about-java-serializer-usage = false
   }
 
   remote {
@@ -47,3 +47,4 @@ jdbc-read-journal {
 }
 
 slick.db.idleTimeout = 10000 // 10 seconds
+slick.loglevel =DEBUG
