--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 include "postgres-application.conf"
 akka {
-  loglevel = INFO
+    loggers = ["akka.event.slf4j.Slf4jLogger"]
+    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+    loglevel = INFO
 
   actor {
 #        serializers {
