amendment of stopping PostCreatorBot, 1

--- a/src/main/resources/postgres-application.conf
+++ b/src/main/resources/postgres-application.conf
@@ -33,6 +33,9 @@ jdbc-snapshot-store {
 # the akka-persistence-query provider in use
 jdbc-read-journal {
   slick = ${slick}
+add-shutdown-hook=false
+refresh-interval="10ms"
+max-buffer-size="500"
 }
 
 slick {
