serialization by akka-kryo-serialization, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,24 +5,45 @@ akka {
     loglevel = INFO
 
   actor {
-#        serializers {
-#          all_s = "sample.blog.serialization.AllEventSerializer"
-#            java = "akka.serialization.JavaSerializer"
-#            proto = "akka.remote.serialization.ProtobufSerializer"
-#            byte ="akka.serialization.DisabledJavaSerializer"
-#        }
-#        serialization-bindings {
-#            "sample.blog.Post$Event" = byte
-#            "sample.blog.Post$Command" = byte
-#            "sample.blog.AuthorListing$Command" = byte
-#            "sample.blog.AuthorListing$Posts" = byte
-#            "akka.persistence.PersistentRepr" = byte
-#            "akka.dispatch.sysmsg.Watch" = byte
-#            "scala.collection.immutable.List" = java
-#            "java.io.Serializable" = none
-#        }
+extensions=["com.romix.akka.serialization.kryo.KryoSerializationExtension$"]
+kryo{
+implicit-registration-logging=true
+resolve-subclasses=true
+classes=["sample.blog.Post$Event",
+"sample.blog.Post$Command","sample.blog.AuthorListing$Command",
+"sample.blog.AuthorListing$Posts","akka.dispatch.sysmsg.Watch",
+"sample.blog.AuthorListing$GetPosts","sample.blog.AuthorListing$PostSummary",
+"sample.blog.AuthorListing$RemoveFirstN",
+"sample.blog.Post$AddPost","sample.blog.Post$PostAdded",
+"sample.blog.Post$BodyChanged","sample.blog.Post$TitleUpdated",
+"sample.blog.Post$PostContent",
+"sample.blog.Post$AuthorUpdated",
+"sample.blog.Post$Removed",
+"sample.blog.Post$ChangeBody",
+"sample.blog.Post$UpdateTitle",
+"sample.blog.Post$Publish",
+"sample.blog.Post$PostPublished",
+"sample.blog.Post$Remove",
+"java.time.OffsetDateTime",
+"akka.remote.RemoteActorRef",
+"akka.actor.RepointableActorRef",
+"scala.collection.immutable.Nil$",
+"scala.collection.immutable.$colon$colon"]
+}
+serializers {
+java="akka.serialization.JavaSerializer"
+kryo="com.romix.akka.serialization.kryo.KryoSerializer"
+}
+serialization-bindings {
+"sample.blog.Post$Event"=kryo
+"sample.blog.Post$Command"=kryo
+"sample.blog.AuthorListing$Command"=kryo
+"sample.blog.AuthorListing$Posts"=kryo
+"akka.dispatch.sysmsg.Watch"=kryo
+"java.io.Serializable"=none
+}
         provider = "akka.cluster.ClusterActorRefProvider"
-        warn-about-java-serializer-usage = false
+#        warn-about-java-serializer-usage = false
   }
 
   remote {
