serialization by akka-kryo-serialization, kryo settings optimization, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,8 @@ akka {
         kryo{
 
             implicit-registration-logging = true
+            type = "nograph"
+            kryo-reference-map = false
             resolve-subclasses = true
             classes = ["sample.blog.Post$Event",
             "sample.blog.Post$Command","sample.blog.AuthorListing$Command",
