"unwind" benchmarking tests and optimizations, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,10 @@ akka {
             implicit-registration-logging = true
             type = "nograph"
             kryo-reference-map = false
+            kryo-trace = false
             resolve-subclasses = true
+//            buffer-size = 4096
+            buffer-size = 32768
             classes = ["sample.blog.Post$Event",
                 "sample.blog.Post$Command", "sample.blog.AuthorListing$Command",
                 "sample.blog.AuthorListing$Posts", "akka.dispatch.sysmsg.Watch",
@@ -44,6 +47,7 @@ akka {
             "sample.blog.AuthorListing$Command" = kryo
             "sample.blog.AuthorListing$Posts" = kryo
             "akka.dispatch.sysmsg.Watch" = kryo
+            "scala.collection.immutable.$colon$colon" = kryo
             "java.io.Serializable" = none
         }
         provider = "akka.cluster.ClusterActorRefProvider"
