--- a/src/main/resources/postgres-application.conf
+++ b/src/main/resources/postgres-application.conf
@@ -36,6 +36,9 @@ jdbc-read-journal {
     add-shutdown-hook = false
     refresh-interval = "10ms"
     max-buffer-size = "500"
+    journal-sequence-retrieval{
+        batch-size = 100000
+    }
 }
 
 slick {
