collection change in AuthorListing, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,7 +33,8 @@ akka {
                 "akka.remote.RemoteActorRef",
                 "akka.actor.RepointableActorRef",
                 "scala.collection.immutable.Nil$",
-                "scala.collection.immutable.$colon$colon"]
+                "scala.collection.immutable.$colon$colon",
+                "scala.collection.mutable.ListBuffer"]
         }
 
         serializers {
@@ -48,6 +49,7 @@ akka {
             "sample.blog.AuthorListing$Posts" = kryo
             "akka.dispatch.sysmsg.Watch" = kryo
             "scala.collection.immutable.$colon$colon" = kryo
+            "scala.collection.mutable.ListBuffer" = kryo
             "java.io.Serializable" = none
         }
         provider = "akka.cluster.ClusterActorRefProvider"
