replay journal config, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,7 @@ akka {
             kryo-reference-map = false
             kryo-trace = false
             resolve-subclasses = true
-//            buffer-size = 4096
+            //            buffer-size = 4096
             buffer-size = 32768
             classes = ["sample.blog.Post$Event",
                 "sample.blog.Post$Command", "sample.blog.AuthorListing$Command",
@@ -77,3 +77,4 @@ akka {
 
 slick.db.idleTimeout = 10000 // 10 seconds
 slick.loglevel = DEBUG
+replay-journal = false
