es evolutions, extented PostSummary to PostSummaryEx in ActorListening, 1

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,12 +12,14 @@ akka {
             kryo-reference-map = false
             kryo-trace = false
             resolve-subclasses = true
+            use-unsafe = false
             //            buffer-size = 4096
             buffer-size = 32768
             classes = ["sample.blog.Post$Event",
                 "sample.blog.Post$Command", "sample.blog.AuthorListing$Command",
                 "sample.blog.AuthorListing$Posts", "akka.dispatch.sysmsg.Watch",
                 "sample.blog.AuthorListing$GetPosts", "sample.blog.AuthorListing$PostSummary",
+                "sample.blog.AuthorListing$PostSummaryEx",
                 "sample.blog.AuthorListing$RemoveFirstN",
                 "sample.blog.Post$AddPost", "sample.blog.Post$PostAdded",
                 "sample.blog.Post$BodyChanged", "sample.blog.Post$TitleUpdated",
@@ -34,7 +36,8 @@ akka {
                 "akka.actor.RepointableActorRef",
                 "scala.collection.immutable.Nil$",
                 "scala.collection.immutable.$colon$colon",
-                "scala.collection.mutable.ListBuffer"]
+                "scala.collection.mutable.ListBuffer"
+            ]
         }
 
         serializers {
