--- a/src/main/resources/postgres-application.conf
+++ b/src/main/resources/postgres-application.conf
@@ -19,9 +19,11 @@ jdbc-journal {
     slick = ${slick}
     event-adapters {
         postTagging = "sample.blog.read.PostTaggingEventAdapter"
+        actorListing = "sample.blog.ActorListingEventAdapter"
     }
     event-adapter-bindings {
         "sample.blog.Post$Event" = postTagging
+        "sample.blog.AuthorListing$Command" = actorListing
     }
 }
 
